Initial commit with enhanced Streamlit app features: - Added interactive charts with plotly - Improved UI with metrics and predictions - Added session state management - Enhanced ML model with more features

--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,9 @@ ENV/
 *.swp
 *.swo
 
-# Project specific
-crash_history.json
-*.log
-
 # Streamlit
-.streamlit/
+.streamlit/secrets.toml
+
+# OS
+.DS_Store
+Thumbs.db
