--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit>=1.28.0
+streamlit==1.29.0
+pandas==2.1.4
+numpy==1.26.2
+scikit-learn==1.3.2
+xgboost==2.0.3
 selenium==4.16.0
-pandas>=2.1.0
-numpy>=1.24.0
-plotly>=5.18.0
+beautifulsoup4==4.12.2
 python-dotenv==1.0.0
-webdriver-manager==4.0.1
 requests==2.31.0
-scikit-learn>=1.3.0
+plotly==5.18.0
