--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ numpy==1.26.2
 scikit-learn==1.3.2
 xgboost==2.0.3
 selenium==4.16.0
+webdriver_manager==4.0.1
 beautifulsoup4==4.12.2
 python-dotenv==1.0.0
 requests==2.31.0
